# RA2-Community-Edition

./: .gitignore  LICENSE  README.md
bridge/: .env.example  Dockerfile  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt
bridge/src/: config.py  main.py
bridge/src/devices/: discovery.py  manager.py  models.py
bridge/src/lip/: client.py  commands.py  parser.py
bridge/src/mqtt/: client.py  handler.py  homie.py
bridge/src/setup/: discovery.py
bridge/src/ws/: server.py
bridge/tests/: test_config.py  test_discovery.py  test_homie.py  test_lip_client.py  test_lip_commands.py  test_lip_parser.py  test_main.py  test_manager.py  test_models.py  test_mqtt_client.py  test_mqtt_handler.py  test_ws_server.py
bridge/tests/fixtures/: sample_integration_report.xml
homey-app/: .homeychangelog.json  README.txt  app.js  app.json  package.json
homey-app/.homeycompose/: app.json
homey-app/drivers/ra2-fan/: device.js  driver.compose.json  driver.js
homey-app/drivers/ra2-light/: device.js  driver.compose.json  driver.js
homey-app/drivers/ra2-shade/: device.js  driver.compose.json  driver.js
homey-app/drivers/ra2-switch/: device.js  driver.compose.json  driver.js
homey-app/lib/: bridge-client.js
homey-app/locales/: en.json
homey-app/settings/: index.html
